          CHANGES IN SOUNDGEN VERSION 1.7.0.9000 [--date--]


          CHANGES IN SOUNDGEN VERSION 1.7.0 [24-May-2020]
MAJOR (affects back-compatibility):
  (1) A modified way of creating subharmonics and sidebands in soundgen():
    * The old argument "subDep"" now controls the max amplitude of g0 vs f0 harmonics, while a new argument "subWidth" controls the width of sidebands. Check your old code! Setting "subDep = 100, subWidth = old_value_of_subDep" gives the same results as in earlier versions of soundgen
    * A new argument "subRatio" controls the number of subharmonics, but this behavior can be overridden by the old argument "subFreq"
  (2) All pitch-tracker-specific arguments in analyze() are provided as lists:
    * All arguments starting with "dom", "autocor", "cep", and "spec" are deprecated
    * Instead, use "pitchDom = list(...old arugments...)", "pitchAutocor = list()", etc.
  (3) Some arguments have been removed, notably:
    * analyze(): instead of "candPlot", use tracker specific lists to control how pitch candidate are plotted, eg "pitchAutocor = list(cex = 3, col = 'red')"
    * All previously deprecated arguments have been removed in all functions.

MAJOR:
  * analyze(), analyzeFolder(), pitch_app(): a fifth method added for pitch tracking, namely Harmonic Product Spectrum ("hps")
  * analyze(), analyzeFolder(), pitch_app(): a new argument and output "harmHeight" - an estimate of how high harmonics reach in the spectrum
  * analyze(), analyzeFolder(), pitch_app(): cutFreq defaults to NULL, and all spectral descriptives are exported only once (either for the entire spectrum or under cutFreq)

BUGS FIXED:
  * soundgen(): proper wiggling of secondary control parameters if temperature > 0
  * soundgen(): vibratoFreq and vibratoDep can go beyond preset levels if invalidArgAction = 'ignore'
  * segment(): very short sounds no longer crash

MINOR: